--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,7 +43,7 @@ jobs:
         cd ./src/main/resources
         touch ./application.properties
           
-        echo "${{ secrets.properties }}" >> ./application.properties
+        echo "${{ secrets.PROPERTIES }}" >> ./application.properties
       shell: bash
 
     # 2. Spring Boot 애플리케이션 빌드
