--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ out/
 /.nb-gradle/
 
 /src/main/resources/application.properties
+/src/main/resources/application-oauth.properties
 
 ## git Action
 .github/workflows/gradle.yml
