--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ java {
     }
 }
 
-//configurations {
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -26,17 +26,32 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     // Swagger 설정 openapi-ui
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.5.0'
+
     // Lombok
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
-    // Database 설정
+
+    // DB 설정
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    /// OAuth2 dependency
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // Spring-security dependency
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    // Jwt Token dependency
+    implementation group:'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    implementation group:'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    implementation group:'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('compileJava') {
