--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     implementation group:'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     implementation group:'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
-    // AWS SDK for S3
-    implementation 'software.amazon.awssdk:s3:2.20.19'
+    ///S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('compileJava') {
