--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation group:'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     implementation group:'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
-    ///S3
+    // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
